--- a/public/stylesheets/public.css
+++ b/public/stylesheets/public.css
@@ -1,136 +1,150 @@
 html {
-	height: 100%;
-	width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 body {
-	height: 100%;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 13px;
-	line-height: 15px;
-	background: #EEE4B9;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 15px;
+    background: #EEE4B9;
 }
 
 img {
-	border: none;
+    border: none;
 }
 
 a {
-	color: #8D0D19
+    color: #8D0D19
 }
 
 a:hover {
-	color: #1A446C
+    color: #1A446C
 }
 
 #header {
-	height: 70px;
-	margin: 0;
-	padding: 0;
-	text-align: left;
-	background: #1A446C;
-	color: #D4E6F4;
+    height: 70px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    background: #1A446C;
+    color: #D4E6F4;
 }
 
 #header h1 {
-	padding: 1em;
-	margin: 0;
+    padding: 1em;
+    margin: 0;
 }
 
 #main {
-	height: 550px;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	background: #EEE4B9;
+    height: 550px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background: #EEE4B9;
 }
 
 #footer {
-	clear: both;
-	height: 2em;
-	margin: 0;
-	padding: 1em;
-	text-align: center;
-	background: #1A446C;
-	color: #EEE4B9
+    clear: both;
+    height: 2em;
+    margin: 0;
+    padding: 1em;
+    text-align: center;
+    background: #1A446C;
+    color: #EEE4B9
 }
 
 #navigation {
-	float: left;
-	width: 150px;
-	height: 100%;
-	margin: 0;
-	padding: 0 2em;
-	color: #D4E6F4;
-	background: #8D0D19;
+    float: left;
+    width: 150px;
+    height: 100%;
+    margin: 0;
+    padding: 0 2em;
+    color: #D4E6F4;
+    background: #8D0D19;
 }
 
 #navigation a {
-	color: #D4E6F4;
-	text-decoration: none;
+    color: #D4E6F4;
+    text-decoration: none;
 }
 
 #navigation a:hover {
-	color: #FFF;
+    color: #FFF;
 }
 
 ul.subjects {
-	margin: 1em 0;
-	padding-left: 0;
-	list-style: none;
+    margin: 1em 0;
+    padding-left: 0;
+    list-style: none;
 }
 
 ul.pages {
-	padding-left: 2em;
-	list-item: square;
+    padding-left: 2em;
+    list-item: square;
 }
 
 .selected {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 .save {
-	background: #8D0D19;
-	color: #EEE4B9;
-	font-weight: bold;
+    background: #8D0D19;
+    color: #EEE4B9;
+    font-weight: bold;
 }
 
 #page {
-	float: left;
-	height: 100%;
-	padding-left: 2em;
-	vertical-align: top;
-	background: #EEE4B9;
+    float: left;
+    height: 100%;
+    padding-left: 2em;
+    vertical-align: top;
+    background: #EEE4B9;
 }
 
-#page h2 {
-	color: #8D0D19;
-	margin-top: 1em;
+#users {
+     float: left;
+    height: 100%;
+    padding-left: 2em;
+    vertical-align: top;
+    background: #EEE4B9;
+}
+
+#users th{
+    color: #8D0D19;
+    width: 200px;
+    text-align: left;
+    padding: 1em 0;
+}
+#page, #users h2 {
+    color: #8D0D19;
+    margin-top: 1em;
 }
 
 #page h3 {
-	color: #8D0D19;
+    color: #8D0D19;
 }
 
 .view-content{
-	margin: 1em; padding: 1em; border: 1px solid #999;
+    margin: 1em; padding: 1em; border: 1px solid #999;
 }
 div.message {
-	border: 1px solid #8D0D19;
-	color: #8D0D19;
-	font-weight: bold;
-	margin: 2em 0;
-	padding: 1em;
+    border: 1px solid #8D0D19;
+    color: #8D0D19;
+    font-weight: bold;
+    margin: 2em 0;
+    padding: 1em;
 }
 
 .errors{
-	color: #8D0D19; border: 2px solid #8D0D19;
-	margin: 1em 0; padding: 1em;
+    color: #8D0D19; border: 2px solid #8D0D19;
+    margin: 1em 0; padding: 1em;
 }
 .errors ul {
-	padding-left: 2em;
+    padding-left: 2em;
 }
